kubernetes/test/apps/external-secrets/external-secrets/bitwarden/network-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-to-bw-cli
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: bitwarden
      app.kubernetes.io/name: bitwarden
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: external-secrets
            app.kubernetes.io/name: external-secrets
            ## Namespace where external-secret lives. Can be removed if they're in the same namespace
            k8s:io.kubernetes.pod.namespace: kube-system
